methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:58: error: not found: value red
      case 2 => coleur = red
                         ^